connectivity/manifests/echo-ingress-l7-http-deathstar.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "echo-ingress-l7-deathstar"
spec:
  description: "L7 policy to restrict access to specific HTTP call e.g. /v1/request-landing"
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        other: client
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/v1/request-landing"
